docs: added space complexity in DSA Notes
New topic Space Complexity vs Auxilary Space added in DSA Notes

--- a/DSA/1.Analysis of Algorithms Part-1.md
+++ b/DSA/1.Analysis of Algorithms Part-1.md
@@ -13,7 +13,9 @@
 - [Asymptotic Complexity - Examples](./1.Analysis%20of%20Algorithms%20Part-1.md#asymptotic-complexity-examples)
 - [Worksheet 1.1: Growth of Functions and Run-Time Estimation](./1.Analysis%20of%20Algorithms%20Part-1.md#worksheet-11-growth-of-functions-and-run-time-estimation)
 - [Worksheet 1.2: Asymptotic Complexity](./1.Analysis%20of%20Algorithms%20Part-1.md#worksheet-12-asymptotic-complexity)
+- [Space Complexity]()
 - [Reference](./1.Analysis%20of%20Algorithms%20Part-1.md#reference)
+
 
 <p align="right"><a href="#top">⬆️ Back to Top</a></p>
 
@@ -696,6 +698,69 @@ InsertionSort(A, n) {
 
 
 <p align="right"><a href="#top">⬆️ Back to Top</a></p>
+
+---
+
+## Space Complexity vs Auxiliary Space
+
+### 🔹 Space Complexity
+Total memory used by an algorithm.
+
+Includes:
+- Input space
+- Output space
+- Temporary variables
+- Function call stack
+
+
+- **Space Complexity = Input Space + Auxiliary Space**
+
+### 🔹 Auxiliary Space
+Extra memory used by the algorithm (excluding input).
+
+Includes:
+- Temporary variables
+- Data structures
+- Recursion stack
+
+---
+
+### 🔍 Examples
+
+- 1️⃣ Sum of Array
+
+```java
+int sum(int arr[], int n) {
+    int s = 0;
+    for(int i=0;i<n;i++) s += arr[i];
+    return s;
+}
+```
+Input array → O(n)
+Extra variable → O(1)
+
+👉 Auxiliary Space = O(1)
+👉 Space Complexity = O(n)
+
+- 2️⃣ Merge Sort
+
+Input array → O(n)
+Temporary array → O(n)
+
+👉 Auxiliary Space = O(n)
+👉 Space Complexity = O(n)
+
+- 3️⃣ Recursion (Factorial)
+
+```java
+int fact(int n) {
+    if(n == 1) return 1;
+    return n * fact(n - 1);
+}
+```
+👉 Recursion stack → O(n)
+👉 Auxiliary Space = O(n)
+👉 Space Complexity = O(n)
 
 ---
 
